--- a/ClientApp/src/app/adcalculator/adcalculator.component.html
+++ b/ClientApp/src/app/adcalculator/adcalculator.component.html
@@ -18,7 +18,7 @@
         <label class="col-sm-2 col-form-lable">Media Type</label>
         <div class="col-sm-6">
             <select class="form-control" [(ngModel)]="MediaType" (change)="changeMediaType($event)">
-                <option>--Select--</option>
+                <option value="">--Select--</option>
                 <option *ngFor="let mtName of AdParams.mediaTypes">
                     {{mtName}}
                 </option>
@@ -30,9 +30,9 @@
     <div class="form-group" *ngIf="MediaType=='Radio'">
         <label class="col-sm-2 col-form-lable">Station</label>
         <div class="col-sm-6">
-            <div class="form-check form-check-inline" *ngFor="let stName of AdParams.stations">
-                <input class="form-check-input" type="checkbox" value={{stName}} (change)="updateStations($event)" />
-                <label class="form-check-label">{{stName}}</label>
+            <div class="form-check form-check-inline" *ngFor="let it of AdParams.stations">
+                <input class="form-check-input" type="checkbox" value={{it.id}} (change)="updateStations($event)" />
+                <label class="form-check-label">{{it.label}}</label>
             </div>
         </div>
         <small class="col-sm-6 form-text text-danger" *ngIf="InvalidateStations">The station is required item.</small>
